--- a/social-links-profile-challenge/css/styles.css
+++ b/social-links-profile-challenge/css/styles.css
@@ -58,11 +58,12 @@ body{
     grid-template-columns: auto;
     grid-template-rows: auto 1fr;
 }
-header{
-    grid-area: 1/1/2/2;
+header, .sn-container, .buttons{
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+header{
+    grid-area: 1/1/2/2;
 }
 main{
     grid-area: 2/1/3/2;
@@ -80,15 +81,12 @@ main{
     border-radius: .5em;
 }
 .sn-container{
+    align-items: center;
     width: 100%;
     max-width: 340px;
     border-radius: 1em;
     margin: 2em;
     padding: 2.4em 1.8em 1.5em 1.8em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .sn-container :is(img, address){
     margin-bottom: 20px;
@@ -109,8 +107,6 @@ main{
 }
 .buttons{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     gap: .8em;
 }
 .buttons button{
@@ -118,23 +114,41 @@ main{
     padding: .5em 0;
     border-radius: .4em;
     font-weight: var(--weight-700);
+    transition: color .3s ease, font-size .3s ease;    
 }
 .buttons button:hover{
     background-color: var(--green);
     font-size: 1.2rem;
     color: var(--dark-grey);
     cursor: pointer;
-    transition: color .3s ease, font-size .3s ease; /* one transition declaration, two properties changed with "," */
+}
+.attr-container{
+    transition: background-color .3s ease;
+}
+.attr-container p{
+    transition: color .3s ease;
+}
+.attr-container a{
+    text-decoration: transparent;
+    transition: font-size .3s ease, font-weight .3s ease, text-decoration-color .3s ease;
+    /*
+    transitions start from point "A" to point "B"
+    A: Text-decoration: transparent. Its default value is "none" (NULL) so transitions wont work
+    B: In the pseudo selector (hover) text-decoration will be underline
+    */
 }
 .attr-container a:hover{
-    background-color: var(--green);
     color: var(--dark-grey);
-    cursor: pointer;
+    font-weight: var(--weight-700);
+    font-size: 1.1rem;
+    text-decoration: underline;
+    /*
+    transitions start from point "A" to point "B"
+    A: Transitions must be set on the element before the pseudo selectors (hover in this case).
+    B: After pseudo selectors, the new properties must be set for the transitions to work
+    */
 }
 @media only screen and (max-width: 935px) {
-    main{
-        grid-area: 2/1/3/2;
-    }
     .attr-container{
         align-self: center;
     }
