--- a/social-links-profile-challenge/css/styles.css
+++ b/social-links-profile-challenge/css/styles.css
@@ -3,14 +3,6 @@
     font-family: "Inter-Regular";
     src: url(../assets/fonts/static/Inter-Regular.ttf);
 }
-@font-face {
-    font-family: "Inter-semiBold";
-    src: url(../assets/fonts/static/Inter-SemiBold.ttf);
-}
-@font-face {
-    font-family: "Inter-Bold";
-    src: url(../assets/fonts/static/Inter-Bold.ttf);
-}
 /*variables declaration*/
 :root{
     --font-inter: Inter-Regular;
@@ -34,13 +26,12 @@ a, address{
     font-style: normal;
     text-decoration: none;
 }
-button{
+li{
     background: none;
     border: none;
     text-align: center;
-    background-color: transparent;
-    display: block;
     font-size: 1rem;
+    list-style: none;
 }
 img{
     display: block;
@@ -58,7 +49,7 @@ body{
     grid-template-columns: auto;
     grid-template-rows: auto 1fr;
 }
-header, .sn-container, .buttons{
+header, .sn-container, .sn-links{
     display: flex;
     flex-direction: column;
 }
@@ -91,7 +82,7 @@ main{
 .sn-container :is(img, address){
     margin-bottom: 20px;
 }
-.sn-container q{
+.sn-container p{
     margin-bottom: 1.3em;
     font-size: .9rem;
     font-weight: var(--weight-400);
@@ -105,18 +96,18 @@ main{
     color: var(--green);
     font-weight: var(--weight-600);
 }
-.buttons{
+.sn-links{
     width: 100%;
     gap: .8em;
 }
-.buttons button{
+.sn-links li{
     background-color: var(--grey);
     padding: .5em 0;
     border-radius: .4em;
     font-weight: var(--weight-700);
     transition: color .3s ease, font-size .3s ease;    
 }
-.buttons button:hover{
+.sn-links li:hover{
     background-color: var(--green);
     font-size: 1.2rem;
     color: var(--dark-grey);
